--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,3 +20,16 @@ steps:
     npm install
     ng build
   displayName: 'npm install and build'
+
+- task: DownloadBuildArtifacts@0
+  inputs:
+    buildType: 'current'
+    downloadType: 'specific'
+    itemPattern: '**/dist'
+    downloadPath: '$(System.ArtifactsDirectory)'
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
+ 
