Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,4 +26,8 @@ steps:
     downloadType: 'specific'
     itemPattern: '**/dist'
     downloadPath: '$(System.ArtifactsDirectory)'
+
+- task: PublishBuildArtifacts@1
+  displayName: 'Publish Artifact: drop'
+  condition: succeeded()
  
