Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ steps:
 - script: |
     npm install -g @angular/cli@9.0.1
     npm install
-    ng build --prod
+    npm run build
   displayName: 'npm install and build'
   workingDirectory: '$(Build.SourcesDirectory)'
 - task: ArchiveFiles@2
