Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,15 +21,8 @@ steps:
     npm run build
   displayName: 'npm install and build'
   workingDirectory: '$(Build.SourcesDirectory)'
-- task: ArchiveFiles@2
-  inputs:
-    rootFolderOrFile: 'Manikanta287/angular/dist'
-    includeRootFolder: true
-    archiveType: 'zip'
-    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
-    replaceExistingArchive: true    
 - task: PublishBuildArtifacts@1
   inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    PathtoPublish: '$(Build.SourcesDirectory)/dist'
     ArtifactName: 'drop'
     publishLocation: 'Container'
