--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,6 +23,6 @@ steps:
   workingDirectory: '$(Build.SourcesDirectory)'
 - task: PublishBuildArtifacts@1
   inputs:
-    PathtoPublish: '$(Build.SourcesDirectory)/index.html'
+    PathtoPublish: '$(Build.SourcesDirectory)/angular/index.html'
     ArtifactName: 'drop'
     publishLocation: 'Container'
