--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,11 +18,12 @@ steps:
 - script: |
     npm install -g @angular/cli@9.0.1
     npm install
-    npm run build
-  displayName: 'npm install and build'
-  workingDirectory: '$(Build.SourcesDirectory)'
+- task: Npm@1
+  inputs:
+    command: 'custom'
+    customCommand: 'run prod-build-dev'
 - task: PublishBuildArtifacts@1
   inputs:
-    PathtoPublish: '**/index.html'
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
     ArtifactName: 'drop'
     publishLocation: 'Container'
