--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,7 +24,7 @@ steps:
     customCommand: 'run prod-build-dev'
 - task: CopyFiles@2
   inputs:
-    contents: 'dist/Airline**'
+    contents: '**/dist/Airline'
     targetFolder: $(Build.ArtifactStagingDirectory)
 - task: PublishBuildArtifacts@1
   inputs:
